Layout/spacing and small fix (#107)
* fix: fixed conflict

* style: last child has no margin bottom for mobile

* style: title spacing css variable

* style: title spacing css variable

* style: remove margin on mobile

* feat: increased quality of the images

* style: no text decoration for hrefs

* style: no text decoration for hrefs

* style: h1 margin bottom decreased

--- a/src/components/LearningResources/learning-resources.module.scss
+++ b/src/components/LearningResources/learning-resources.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/utility/responds-to.scss";
 
 .title {
-  margin-bottom: 3.5rem;
+  margin-bottom: var(--title-spacing);
   @include responds-to("sm", "min") {
     text-align: center;
   }
