--- a/src/components/Location/location.module.scss
+++ b/src/components/Location/location.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
 
   h2 {
-    margin-bottom: 3.5rem;
+    margin-bottom: var(--title-spacing);
   }
 }
 
